tests/error/linear_errors/mutable_empty_struct1.err
Error: Copy violation (at $FILE:13:11)
   | 
11 | def foo(s: MyStruct @owned) -> MyStruct:
12 |     t = s  # Empty mutable structs are stiff affine
13 |     return s
   |            ^ Variable `s` with non-copyable type `MyStruct` cannot be
   |              returned ...

Note:
   | 
11 | def foo(s: MyStruct @owned) -> MyStruct:
12 |     t = s  # Empty mutable structs are stiff affine
   |         - Variable `s` already moved here

Guppy compilation failed due to 1 previous error
